bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_value_unexpected_named_generic.stderr
error: Invalid pezpallet::storage, Unexpected generic `P` for `StorageValue`. `StorageValue` expect generics `Value`, and optional generics `QueryKind`, `OnEmpty`.
  --> tests/pezpallet_ui/storage_value_unexpected_named_generic.rs:36:29
   |
36 |     type Foo<T> = StorageValue<P = u32>;
   |                                ^

error: Invalid pezpallet::storage, cannot find `Value` generic, required for `StorageValue`.
  --> tests/pezpallet_ui/storage_value_unexpected_named_generic.rs:36:28
   |
36 |     type Foo<T> = StorageValue<P = u32>;
   |                               ^
